--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@heroicons/react": "^2.1.5",
     "class-variance-authority": "^0.7.0",
+    "music-metadata": "^10.3.1",
     "next": "14.2.7",
+    "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18"
   },
