--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^2.1.5",
     "class-variance-authority": "^0.7.0",
+    "firebase": "^10.13.1",
     "music-metadata": "^10.3.1",
     "next": "14.2.7",
     "next-auth": "^4.24.7",
