--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.5",
+    "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "firebase": "^10.13.1",
     "music-metadata": "^10.3.1",
